[gd_scene load_steps=4 format=3 uid="uid://yhwf3jf7fl4o"]

[ext_resource type="Texture2D" uid="uid://cnij2ml1wlaru" path="res://placeholder_textures/Wallpaper 3.png" id="1_08ugy"]
[ext_resource type="Script" uid="uid://bfd6ali1fm536" path="res://game/scenes/scenes_script/escp_menu_script.gd" id="1_unjp0"]
[ext_resource type="Texture2D" uid="uid://fmj62wwgm0gf" path="res://placeholder_textures/icon.svg" id="2_g6aog"]

[node name="Main_Menu" type="Node2D"]
script = ExtResource("1_unjp0")

[node name="Background_2DSprite" type="Sprite2D" parent="."]
position = Vector2(639.5, 359.125)
scale = Vector2(0.602166, 0.511549)
texture = ExtResource("1_08ugy")

[node name="Settings_Button" type="Button" parent="."]
offset_left = 541.0
offset_top = 312.0
offset_right = 743.0
offset_bottom = 448.0
text = "Settings"
icon = ExtResource("2_g6aog")

[node name="Leave_Menu_Button" type="Button" parent="."]
offset_left = 560.0
offset_top = 208.0
offset_right = 643.0
offset_bottom = 265.0
text = "Exit Menu"

[node name="Save Game" type="Button" parent="."]
offset_left = 511.0
offset_top = 105.0
offset_right = 682.0
offset_bottom = 179.0
text = "Save Game
"

[connection signal="pressed" from="Settings_Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Leave_Menu_Button" to="." method="_on_leave_menu_button_pressed"]
[connection signal="pressed" from="Save Game" to="." method="_on_save_game_pressed"]
